# DateHer

./: .gitignore  Agentic-RAG-chat-model.ipynb  Dating.txt  README.md  app.py  chat-sentiment-2.ipynb  chat-sentiment-Copy1.ipynb  chat_model.py  chatbot_final-2.ipynb  chatbot_final.ipynb  cleaned_requirements.txt  diff.diff  ff.py  intents.json  main.py  new_intents.json  pyproject.toml  requirements.txt  scoring.py
model_files/: chat-sentiment-2.ipynb  chat-sentiment.ipynb  chatbot_model.ipynb  ff.ipynb
src/api/: calc.py  chat.py  match.py  tonepredict.py
src/chat_model/: base_chat.py
src/schemas/: chat.py
src/scoring/: scoring_bot.py  scoring_users.py
src/utils/: utils.py
