[tool.poetry]
name = "dateher"
version = "0.1.0"
description = ""
authors = ["Lab Rat <dev.frolics@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
tensorflow = "^2.17.0"
pandas = "^2.2.2"
httpx = "^0.27.0"
nltk = "^3.9.1"
scikit-learn = "^1.5.1"
textblob = "^0.18.0.post0"
gensim = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
